# berkeley-softfloat-3

./: CMakeLists.txt  platform.h
source/: s_countLeadingZeros16.c
